fix: chore list flex overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -21,6 +21,7 @@
 .choreListContainer {
     max-height: 100%;
     overflow-y: auto;
+    flex: 1;
 }
 
 .container h2 {
